[gd_scene load_steps=11 format=3 uid="uid://cydy5qjuigfp3"]

[ext_resource type="PhysicsMaterial" uid="uid://dgwq5sy5q64q6" path="res://resources/bouncy.tres" id="1_a2vn4"]
[ext_resource type="Script" uid="uid://bibtl0ssmgbkn" path="res://ships/lute/lute.gd" id="2_ytotd"]
[ext_resource type="PackedScene" uid="uid://ddy4kejr8vdr3" path="res://components/health_component/health_component.tscn" id="3_sh22i"]
[ext_resource type="PackedScene" uid="uid://bi35p88q2yiy4" path="res://components/clip_component/clip_component.tscn" id="4_vw24p"]
[ext_resource type="Texture2D" uid="uid://b4aj43mwsjri8" path="res://ships/lute/lute.png" id="5_mc31v"]
[ext_resource type="Script" uid="uid://c0io7xj5ls7wb" path="res://components/hitbox_component/hitbox_component.gd" id="6_v134t"]
[ext_resource type="PackedScene" uid="uid://cxpxgsvcevmjt" path="res://components/meter/meter.tscn" id="7_d5y3j"]
[ext_resource type="PackedScene" uid="uid://b2oi0bk733qru" path="res://components/input_component/input_component.tscn" id="8_mb3vb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2d6k1"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7tnc7"]
radius = 96.0

[node name="Lute" type="RigidBody2D" node_paths=PackedStringArray("slugger_bar", "engine", "clip_component", "hitbox", "input") groups=["Player", "Player1"]]
collision_layer = 8
collision_mask = 41
physics_material_override = ExtResource("1_a2vn4")
inertia = 18.0
continuous_cd = 2
angular_damp = 3.0
script = ExtResource("2_ytotd")
slugger_bar = NodePath("SluggerBar")
engine = NodePath("Engine")
clip_component = NodePath("ClipComponent")
bullet_amount = 10
hitbox = NodePath("HitboxComponent")
input = NodePath("InputComponent")
rotation_speed = 720.0
acceleration = 32.0
top_speed = 146.0

[node name="HealthComponent" parent="." node_paths=PackedStringArray("health_bar", "target") instance=ExtResource("3_sh22i")]
health_bar = NodePath("../HealthBar")
max_health = 80.0
target = NodePath("..")

[node name="ClipComponent" parent="." node_paths=PackedStringArray("clip_bar") instance=ExtResource("4_vw24p")]
position = Vector2(9, 0)
clip_bar = NodePath("../ClipBar")
max_clip = 3
reload_time = 0.6
reload_delay = 0.7
fire_delay = 0.2

[node name="Engine" type="CPUParticles2D" parent="."]
position = Vector2(-4, 0)
amount = 50
lifetime = 80.0
spread = 0.0
gravity = Vector2(0, 0)
scale_amount_min = 2.0
scale_amount_max = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 0)
texture = ExtResource("5_mc31v")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2d6k1")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_comp", "target") groups=["Player", "Player1"]]
collision_layer = 2
collision_mask = 148
script = ExtResource("6_v134t")
health_comp = NodePath("../HealthComponent")
target = NodePath("..")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HitboxComponent"]
polygon = PackedVector2Array(-5, 0, -3, -4, 0, -6, 3, -4, 8, -4, 8, 4, 3, 4, 0, 6, -3, 4)

[node name="SlugArea" type="Area2D" parent="."]
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlugArea"]
shape = SubResource("CircleShape2D_7tnc7")

[node name="SluggerBar" parent="." instance=ExtResource("7_d5y3j")]
offset_left = -8.0
offset_top = -8.0
offset_right = -7.0
offset_bottom = -7.0
rotation = 1.57079
max_value = 0.5
value = 0.0
fill_mode = 6

[node name="HealthBar" parent="." instance=ExtResource("7_d5y3j")]
offset_left = 10.0
offset_top = -9.0
offset_right = 11.0
offset_bottom = -8.0
rotation = 3.14159

[node name="ClipBar" parent="." instance=ExtResource("7_d5y3j")]
offset_left = 10.0
offset_top = 12.0
offset_right = 11.0
offset_bottom = 13.0
rotation = 3.14159

[node name="InputComponent" parent="." node_paths=PackedStringArray("target") instance=ExtResource("8_mb3vb")]
target = NodePath("..")

[connection signal="area_entered" from="SlugArea" to="." method="_on_slug_area_area_entered"]
[connection signal="area_exited" from="SlugArea" to="." method="_on_slug_area_area_exited"]
